deps/v8/test/message/let-lexical-declaration-destructuring-in-single-statement.out
*%(basename)s:5: SyntaxError: Lexical declaration cannot appear in a single-statement context
with ({}) let [a] = [42];
          ^^^
SyntaxError: Lexical declaration cannot appear in a single-statement context
